2nd commit for crucial fixes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=userservice
 server.port=3000
-#spring.datasource.url=jdbc:postgresql://localhost:5432/products
-#spring.datasource.username=postgres
-#spring.datasource.password=somethingviral
+spring.datasource.url=jdbc:postgresql://localhost:5432/products
+spring.datasource.username=postgres
+spring.datasource.password=somethingviral
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
